# gitingest-zed-extension

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: tests.yml
src/: lib.rs
